{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 68,
  "lineage": "f9b230ca-3308-3918-338e-b03379827a95",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:security-group/sg-09f62746805d5b2a8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09f62746805d5b2a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04023eae68c4153da"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-eks-cluster-cluster-2024042420154420100000000d",
            "name_prefix": "myapp-eks-cluster-cluster-",
            "owner_id": "851725427048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:security-group/sg-04023eae68c4153da",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04023eae68c4153da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f62746805d5b2a8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "myapp-eks-cluster-node-2024042420154414960000000c",
            "name_prefix": "myapp-eks-cluster-node-",
            "owner_id": "851725427048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3369804922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f62746805d5b2a8",
            "security_group_rule_id": "sgr-0dafca0d0e1f5b22f",
            "self": false,
            "source_security_group_id": "sg-04023eae68c4153da",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-546011094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-0af4b438b8bd2199b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2549977991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-02216e24695297236",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-829718157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-070f93cb28eb7320e",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4164294939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-082efcab983db3f55",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3949602106",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-09e6d0d3bc1c78ac3",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2412451569",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-09117da01db041e0c",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2923854277",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-0443e4dd7cee2a060",
            "self": false,
            "source_security_group_id": "sg-09f62746805d5b2a8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4237716019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-0c07d49c44f896560",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1926771430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-07c30e1d1c86320d0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3599208713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04023eae68c4153da",
            "security_group_rule_id": "sgr-0f4843f49615ac0b1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:network-acl/acl-022c38262fad37b3a",
            "default_network_acl_id": "acl-022c38262fad37b3a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-022c38262fad37b3a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851725427048",
            "subnet_ids": [
              "subnet-00fc438a9d5414550",
              "subnet-0232229f355825622",
              "subnet-023df4d2777abbe7d",
              "subnet-03dc8d757e2a24016",
              "subnet-0c70aa7bf80af7744",
              "subnet-0f93b86c99e9c5abb"
            ],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:route-table/rtb-0602bd736f45bb0c3",
            "default_route_table_id": "rtb-0602bd736f45bb0c3",
            "id": "rtb-0602bd736f45bb0c3",
            "owner_id": "851725427048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:security-group/sg-0fffb1291075fde07",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fffb1291075fde07",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851725427048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066f38d7b211e33f1",
            "association_id": "eipassoc-04820077d69559575",
            "domain": "vpc",
            "id": "eipalloc-066f38d7b211e33f1",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-02b7fce005da1373d",
            "private_dns": "ip-10-0-4-151.eu-west-3.compute.internal",
            "private_ip": "10.0.4.151",
            "public_dns": "ec2-52-47-203-15.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.203.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df6acd4de7276708",
            "association_id": "eipassoc-035cc989c21c9356c",
            "domain": "vpc",
            "id": "eipalloc-0df6acd4de7276708",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0ebad476071d23bda",
            "private_dns": "ip-10-0-5-38.eu-west-3.compute.internal",
            "private_ip": "10.0.5.38",
            "public_dns": "ec2-15-188-221-75.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.221.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ed6f92a853ef0e4",
            "association_id": "eipassoc-03833ccc4d2e98b9f",
            "domain": "vpc",
            "id": "eipalloc-04ed6f92a853ef0e4",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0e9af6a3a0cd56158",
            "private_dns": "ip-10-0-6-163.eu-west-3.compute.internal",
            "private_ip": "10.0.6.163",
            "public_dns": "ec2-15-188-165-238.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.165.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:internet-gateway/igw-051f486205694014a",
            "id": "igw-051f486205694014a",
            "owner_id": "851725427048",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066f38d7b211e33f1",
            "association_id": "eipassoc-04820077d69559575",
            "connectivity_type": "public",
            "id": "nat-0024c1ee7ea948cfa",
            "network_interface_id": "eni-02b7fce005da1373d",
            "private_ip": "10.0.4.151",
            "public_ip": "52.47.203.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023df4d2777abbe7d",
            "tags": {
              "Name": "myapp-vpc-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df6acd4de7276708",
            "association_id": "eipassoc-035cc989c21c9356c",
            "connectivity_type": "public",
            "id": "nat-0a9ea4884e4a44b93",
            "network_interface_id": "eni-0ebad476071d23bda",
            "private_ip": "10.0.5.38",
            "public_ip": "15.188.221.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c70aa7bf80af7744",
            "tags": {
              "Name": "myapp-vpc-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ed6f92a853ef0e4",
            "association_id": "eipassoc-03833ccc4d2e98b9f",
            "connectivity_type": "public",
            "id": "nat-0c3819777ddaa1c5d",
            "network_interface_id": "eni-0e9af6a3a0cd56158",
            "private_ip": "10.0.6.163",
            "public_ip": "15.188.165.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0232229f355825622",
            "tags": {
              "Name": "myapp-vpc-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d5399cf5705f8fe81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0024c1ee7ea948cfa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5399cf5705f8fe8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-045699fd4d727a9461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a9ea4884e4a44b93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045699fd4d727a946",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078c3dd3ca79052711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3819777ddaa1c5d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078c3dd3ca7905271",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051f486205694014a",
            "id": "r-rtb-0cc79d900aa0ef6fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc79d900aa0ef6fc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:route-table/rtb-0d5399cf5705f8fe8",
            "id": "rtb-0d5399cf5705f8fe8",
            "owner_id": "851725427048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0024c1ee7ea948cfa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:route-table/rtb-045699fd4d727a946",
            "id": "rtb-045699fd4d727a946",
            "owner_id": "851725427048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9ea4884e4a44b93",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:route-table/rtb-078c3dd3ca7905271",
            "id": "rtb-078c3dd3ca7905271",
            "owner_id": "851725427048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3819777ddaa1c5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:route-table/rtb-0cc79d900aa0ef6fc",
            "id": "rtb-0cc79d900aa0ef6fc",
            "owner_id": "851725427048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051f486205694014a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f832bbd59b0d0e6",
            "route_table_id": "rtb-0d5399cf5705f8fe8",
            "subnet_id": "subnet-0f93b86c99e9c5abb"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a05a433fd906241",
            "route_table_id": "rtb-045699fd4d727a946",
            "subnet_id": "subnet-03dc8d757e2a24016"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a23230819674d931",
            "route_table_id": "rtb-078c3dd3ca7905271",
            "subnet_id": "subnet-00fc438a9d5414550"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06002110f0b362d44",
            "route_table_id": "rtb-0cc79d900aa0ef6fc",
            "subnet_id": "subnet-023df4d2777abbe7d"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037bb471475864bcf",
            "route_table_id": "rtb-0cc79d900aa0ef6fc",
            "subnet_id": "subnet-0c70aa7bf80af7744"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9a3cffd81345db5",
            "route_table_id": "rtb-0cc79d900aa0ef6fc",
            "subnet_id": "subnet-0232229f355825622"
          },
          "dependencies": [
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-0f93b86c99e9c5abb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f93b86c99e9c5abb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-03dc8d757e2a24016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc8d757e2a24016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-00fc438a9d5414550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc438a9d5414550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-023df4d2777abbe7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023df4d2777abbe7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-3a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-0c70aa7bf80af7744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c70aa7bf80af7744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-3b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:subnet/subnet-0232229f355825622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0232229f355825622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725427048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-3c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09edc2fe2c341d2b8"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725427048:vpc/vpc-09edc2fe2c341d2b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022c38262fad37b3a",
            "default_route_table_id": "rtb-0602bd736f45bb0c3",
            "default_security_group_id": "sg-0fffb1291075fde07",
            "dhcp_options_id": "dopt-06801ec802731d710",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09edc2fe2c341d2b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0602bd736f45bb0c3",
            "owner_id": "851725427048",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}